base/lifestyle-front/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lifestyle-front
spec:
  selector:
    app: lifestyle-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
