base/lifestyle-front/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifestyle-front
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: default-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: raspberrypi.tail580209.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lifestyle-front
                port:
                  number: 80
